--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "weather-app",
+  "homepage": "https://amit-yadav207.github.io/weather-react-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
